# chenghua-lan

./: .gitignore  SPEC.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-dmg.sh
src/: App.css  App.tsx
src-tauri/: ._tauri.conf.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  network.rs
src/components/: ChatPanel.tsx  DeviceList.tsx
src/types/: index.ts
